fix: about us text-align

--- a/src/assets/sass/pages/Home/_Home-about-us.scss
+++ b/src/assets/sass/pages/Home/_Home-about-us.scss
@@ -67,7 +67,7 @@
       }
       .paragraph {
         color: #757474;
-        // text-align: justify;
+        text-align: center;
         font-size: 1.5rem;
         line-height: 2rem;
         letter-spacing: 0.58px;
